Add SOAP reference

--- a/TestProjectConsole/App.config
+++ b/TestProjectConsole/App.config
@@ -11,4 +11,16 @@
     <add key="database" value="database"/>
     <add key="connection_timeout=30"/>
   </appSettings>
+  <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="SQLDataSoapBinding" />
+      </basicHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="http://www.soapclient.com/xml/SQLDataSoap.wsdl"
+        binding="basicHttpBinding" bindingConfiguration="SQLDataSoapBinding"
+        contract="DataSoap.SQLDataSoapPortType" name="SQLDataSoapPortType" />
+    </client>
+  </system.serviceModel>
 </configuration>
